<resources>
    <string name="app_name">Books</string>

    <string name="section_name_books">Books</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="click_plus_to_add">Click + to add an item.</string>
    <string name="tags_label">Tags:</string>
    <string name="by_author">by</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_entry_text">There are multiple ways of adding a new entry.</string>
    <string name="add_new_entry_man_activity">Add a New Entry</string>
    <string name="string_title">Title:</string>
    <string name="string_author">Author:</string>
    <string name="string_date_published">Date Published:</string>
    <string name="pick_date">Pick Date</string>
    <string name="string_synopsis">Synopsis:</string>
    <string name="string_add_cover">Add Cover:</string>
    <string name="string_submit">Submit</string>
    <string name="string_pick_img">Pick IMG</string>
    <string name="string_paste_url">Paste URL</string>
    <string name="add_manualy_string">Add Manually</string>
    <string name="search_googlebooks_string">Search Google Books</string>
    <string name="cancel_string">Cancel</string>
    <string name="search_google_books_string">Search Google Books</string>
    <string name="search_hint_string">Search by Author or Title</string>
    <string name="synopsis_placeholder_string">A millennium into the future two advancements have altered the course of human history: the colonization of the galaxy and the creation of the positronic brain. Isaac Asimov\'s Robot novels chronicle the unlikely partnership between a New York City detective and a humanoid robot who must learn to work together. Like most people left behind on an over-populated Earth, New York City police detective Elijah Baley had little love for either the arrogant Spacers or their robotic companions. But when a prominent Spacer is murdered under mysterious circumstances, Baley is ordered to the Outer Worlds to help track down the killer. The relationship between Life and his Spacer superiors, who distrusted all Earthmen, was strained from the start. Then he learned that they had assigned him a partner: R. Daneel Olivaw. Worst of all was that the R stood for robot--and his positronic partner was made in the image and likeness of the murder victim!</string>
    <string name="synopsis_label_string">Synopsis</string>
    <string name="book_details_string">Book Details</string>
    <string name="published_label_string">Published:</string>
    <string name="date_published_text_placeholder">1999</string>
    <string name="publisher_label_string">Publisher:</string>
    <string name="publisher_placeholder_string">Harper Collins</string>
    <string name="pages_label_string">Pages:</string>
    <string name="pages_placeholder_string">402</string>
    <string name="number_of_pages_label_string">Number of Pages:</string>
    <string name="action_sort">Sort Criteria</string>
    <string name="string_camera">Camera</string>
    <string name="string_edit">Edit</string>
    <string name="string_delete">Delete</string>
    <string name="string_delete_entry">Would you like to delete the entry?</string>
    <string name="search_string_result">Searching ...</string>
    <string name="search_hint">Search by Title or Author</string>
    <string name="string_sort_order">Sort Order</string>
    <string name="string_search_results">Search Results</string>
    <string name="string_action_about">About</string>
</resources>
