<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.izor066.android.mediatracker.ui.BookDetails">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/viewOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="60"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/viewTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:orientation="horizontal" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <RelativeLayout
                android:id="@+id/rl_book_details_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/fl_image_details_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/pb_rss_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:indeterminateOnly="true" />

                    <ImageView
                        android:id="@+id/iv_img_details_placeholder"
                        android:layout_width="75dp"
                        android:layout_height="108dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignTop="@+id/tv_book_details_title"
                        android:layout_marginRight="15dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_book_black" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_book_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@id/fl_image_details_header"
                    android:paddingTop="0dp"
                    android:text="The Caves of Steel (Robot Series #1) "
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/abc_text_size_large_material" />

                <LinearLayout
                    android:id="@+id/ll_author_details_wrapper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_book_details_title"
                    android:layout_marginTop="4dp"
                    android:layout_toRightOf="@id/fl_image_details_header"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_book_details_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:text="@string/by_author"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <TextView
                        android:id="@+id/tv_book_details_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Isaac Asimov"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_tag_details_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_author_details_wrapper"
                    android:layout_marginTop="4dp"
                    android:layout_toRightOf="@id/fl_image_details_header">

                    <TextView
                        android:id="@+id/tv_tags_details_label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="2dp"
                        android:text="@string/tags_label"
                        android:textSize="@dimen/abc_text_size_small_material" />

                    <TextView
                        android:id="@+id/tv_details_tags"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="Tag 1, Tag 2"
                        android:textSize="@dimen/abc_text_size_small_material" />
                </LinearLayout>

            </RelativeLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/rl_book_details_wrapper"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/divider"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="50dp">

                    <TextView
                        android:id="@+id/tv_details_synopsis_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:text="@string/synopsis_label_string"
                        android:textSize="@dimen/abc_text_size_medium_material" />

                    <TextView
                        android:id="@+id/tv_details_synopsis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:clipToPadding="false"
                        android:text="@string/synopsis_placeholder_string" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/darker_gray" />

                    <RelativeLayout
                        android:id="@+id/tv_details_date_published_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin">

                        <TextView
                            android:id="@+id/tv_details_date_published_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/published_label_string" />

                        <TextView
                            android:id="@+id/tv_details_date_published"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/tv_details_date_published_label"
                            android:text="@string/date_published_text_placeholder" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/tv_details_publisher_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin">

                        <TextView
                            android:id="@+id/tv_details_publisher_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/publisher_label_string" />

                        <TextView
                            android:id="@+id/tv_details_publisher"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/tv_details_publisher_label"
                            android:text="@string/publisher_placeholder_string" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/tv_details_pages_wrapper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin">

                        <TextView
                            android:id="@+id/tv_details_pages_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pages_label_string" />

                        <TextView
                            android:id="@+id/tv_details_pages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@+id/tv_details_pages_label"
                            android:text="@string/pages_placeholder_string" />

                    </RelativeLayout>

                </LinearLayout>

            </ScrollView>

        </RelativeLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_book_details_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:src="@drawable/ic_edit_white"
            app:backgroundTint="@color/colorAccent"
            app:layout_anchor="@id/viewTwo"
            app:layout_anchorGravity="bottom|right|end"
            app:rippleColor="#FFF" />


    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
