<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.izor066.android.mediatracker.ui.BookDetails">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/viewOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="horizontal"/>

            <LinearLayout
                android:id="@+id/viewTwo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:orientation="horizontal"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rl_book_details_wrapper">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fl_image_details_header">

                    <ProgressBar
                        android:id="@+id/pb_rss_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:indeterminateOnly="true"
                        android:indeterminate="true"/>

                    <ImageView
                        android:id="@+id/iv_img_details_placeholder"
                        android:layout_width="75dp"
                        android:layout_height="108dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:src="@drawable/ic_book_black"
                        android:scaleType="centerCrop"
                        android:layout_alignTop="@+id/tv_book_details_title"
                        android:layout_marginRight="15dp" />

                </FrameLayout>

                <TextView
                    android:id="@+id/tv_book_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="The Caves of Steel (Robot Series #1) "
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/abc_text_size_large_material"
                    android:layout_toRightOf="@id/fl_image_details_header"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="0dp"
                    android:paddingTop="0dp"/>

                <LinearLayout
                    android:id="@+id/ll_author_details_wrapper"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@id/fl_image_details_header"
                    android:layout_below="@+id/tv_book_details_title">

                    <TextView
                        android:id="@+id/tv_book_details_by"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/by_author"
                        android:layout_marginRight="4dp"
                        android:textSize="@dimen/abc_text_size_medium_material" />

                    <TextView
                        android:id="@+id/tv_book_details_author"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Isaac Asimov"
                        android:textSize="@dimen/abc_text_size_medium_material" />
                </LinearLayout>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/divider"
                android:background="@android:color/darker_gray"
                android:layout_below="@+id/rl_book_details_wrapper"
                android:layout_marginTop="16dp"/>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/divider"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_details_synopsis_label"
                        android:text="@string/synopsis_label_string"
                        android:textSize="@dimen/abc_text_size_medium_material"
                        android:layout_marginTop="@dimen/activity_vertical_margin"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_details_synopsis"
                        android:text="@string/synopsis_placeholder_string"
                        android:paddingBottom="50dp"
                        android:clipToPadding="false"
                        android:layout_marginTop="@dimen/activity_vertical_margin"/>

                </LinearLayout>
            </ScrollView>

        </RelativeLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_book_details_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            app:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_add_white"
            app:layout_anchor="@id/viewTwo"
            app:layout_anchorGravity="bottom|right|end"
            app:rippleColor="#FFF" />


    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>
